# DSA

./: .gitignore  CMakeLists.txt  main.c  readme.md  todo.md
Array/: array.c  array.h
Bits/: bits.c  bits.h
Core/: core.c  core.h
Hash/: hash.c  hash.h
Linked Lists/: linked.c  linked.h
List/: clist.c  clist.h  dlist.c  dlist.h  list.c  list.h
Map/: map.c  map.h
Matrix/: matrix.c  matrix.h
Queue/: queue.c  queue.h
Stack/: stack.c  stack.h
Tree/: tree.c  tree.h
Utils/: funcs.c  funcs.h  logs.c  logs.h  models.h
algorithms/: graph_traversal.h  sorting.c  sorting.h
arena/: arena.c  arena.h
core/: core.c  core.h
graph/: graph.c  graph.h  graph_algorithms.c  graph_algorithms.h  graph_traversal.c  graph_traversal.h
hash/: hashtable.c  hashtable.h  pair.c
hash/dictionary/: dictionary.c  dictionary.h
hash/hashset/: hashset.c  hashset.h
hash/hashtable/: hashtable.c  hashtable.h
hash/pair/: pair.h
include/: array.h  bits.h  funcs.h  linked.h  logs.h  lqueue.h  lstack.h  map.h  matrix.h  queue.h  sorting.h  stack.h  tree.h
linear/: queue.h  set.c  set.h  stack.h
linear/queue/: queue.c
linear/set/: set.c  set.h
linear/stack/: stack.c
linear/vector/: vector.c  vector.h
linked list/clist/: clist.c  clist.h
linked list/dlist/: dlist.c
linked list/list/: list.c  list.h
list/: clist.h  list.c  list.h
memory/arena/: arena.h
memory/objpool/: objpool.c  objpool.h
src/: array.c  bits.c  funcs.c  linked.c  logs.c  lqueue.c  lstack.c  map.c  matrix.c  queue.c  sorting.c  stack.c  tree.c
tree/: bistree.c  bistree.h  btree.c  heap.c  heap.h  pqueue.c  pqueue.h
tree/bistree/: bistree.c
tree/btree/: btree.c  btree.h
tree/heap/: heap.c  heap.h  pqueue.h
tree/trie/: trie.c  trie.h
